--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
   </ol>
   <h2><a href="https://heartsaying.com/archives/3807" target="_blank">힘들때 한번씩 보자</a></h2>
   <img src="dark.jpg" width="100%" >
+  <div id="lv-container" data-id="city" data-uid="MTAyMC81MjY5NC8yOTE3MQ==">
+	<script type="text/javascript">
+   (function(d, s) {
+       var j, e = d.getElementsByTagName(s)[0];
+
+       if (typeof LivereTower === 'function') { return; }
+
+       j = d.createElement(s);
+       j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+       j.async = true;
+
+       e.parentNode.insertBefore(j, e);
+   })(document, 'script');
+	</script>
+<noscript> 라이브리 댓글 작성을 위해 JavaScript를 활성화 해주세요</noscript>
+</div>
   <p style="margin-top:40px;"><strong>간단함이 훌륭함의 <u>열쇠다</u>.</strong>-이소룡
   <br>승리하면 조금 배울 수 있고,패배하면 모든 것을 배울 수 있다.-크리스티 메튜슨
   <br>승자는 책임지는 태도로 살며,패자는 약속을 남발한다.-유태경전
